# ipcs

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: pypi.yml
docs/: conf.py  event_reference.rst  index.rst  ipcs.ext.rst  ipcs.rst  modules.rst  quickstart.md  requirements.txt
examples/: chat.py  readme.md
examples/chat_room/: readme.md
ipcs/: __init__.py  __main__.py  base.py  client.py  connection.py  errors.py  exceptions.py  server.py  types.py  types_.py  utils.py
ipcs/ext/: __init__.py  for_sanic.py
src/ipcs/: __init__.py  __main__.py  client.py  connection.py  errors.py  server.py  types_.py  utils.py
