[project]
name = "ipcs"
version = "0.2.0"
description = "Simple IPC server/client"
keywords = ["ipc", "networking"]
license = "MIT"
readme = "README.md"
license-files = { paths = ["LICENSE"] }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed"
]
authors = [
    { name = "Takagi Tasuku", email = "tasuren@outlook.jp" }
]
requires-python = ">= 3.10"
dependencies = [
    "websockets>=11.0.3,<12.1.0",
    "orjson>=3.10",
]

[project.urls]
Source = "https://github.com/tasuren/ipcs"
Documentation = "https://ipcs.readthedocs.io/"

[project.scripts]
ipcs-server = "ipcs.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "aioconsole>=0.8.2",
]
